Closed Bug 641535 Opened 13 years ago Closed 13 years ago

TI+JM: Assertion failure: Call site vanished., at ../methodjit/Compiler.cpp:2460

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

(Whiteboard: fixed-in-jaegermonkey)

$ ./js -a -m -n
js> var o = {};
js> o[o.p] = 2;
Assertion failure: Call site vanished., at ../methodjit/Compiler.cpp:2460
Add a couple of missing recompilation rejoin points for SETELEM.

http://hg.mozilla.org/projects/jaegermonkey/rev/61b3cd5aaee1
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.