[INFER] Add recompilation rejoin points for SETELEM, bug 641535.